--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "tether-drop": "git://github.com/torkelo/drop",
     "tslint": "^4.0.2",
     "typescript": "^2.1.4",
-    "virtual-scroll": "^1.1.1"
+    "virtual-scroll": "^1.1.1",
+    "echarts": "^3.3.2"
   }
 }
